--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CharacterDB"
-version = "0.1.0"
+version = "0.1.4"
 description = "A character database for writers"
 authors = ["you"]
 edition = "2021"
@@ -19,4 +19,5 @@ tauri-plugin-fs = "2"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 tauri-plugin-store = "2"
 serde = { version = "1", features = ["derive"] }
+tauri-plugin-updater = "2.0.0"
 serde_json = "1"
