--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CharacterDB"
-version = "0.1.5"
+version = "0.1.6"
 description = "A character database for writers"
 authors = ["you"]
 edition = "2021"
@@ -21,3 +21,4 @@ tauri-plugin-store = "2"
 serde = { version = "1", features = ["derive"] }
 tauri-plugin-updater = "2.0.0"
 serde_json = "1"
+tauri-plugin-log = "2"
