--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CharacterDB"
-version = "0.1.7"
+version = "0.1.8"
 description = "A character database for writers"
 authors = ["you"]
 edition = "2021"
@@ -22,3 +22,7 @@ serde = { version = "1", features = ["derive"] }
 tauri-plugin-updater = "2.0.0"
 serde_json = "1"
 tauri-plugin-log = "2"
+tauri-plugin-process = "2"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
