--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "CharacterDB",
   "private": true,
-  "version": "0.1.8",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "sync-version": "node scripts/sync-versions.js",
+    "version": "npm run sync-version && git add src-tauri/Cargo.toml src-tauri/tauri.conf.json"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
