--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "CharacterDB"
-version = "1.0.0"
+version = "1.0.1"
 description = "A character database for writers"
 authors = ["you"]
 edition = "2021"
@@ -23,6 +23,7 @@ tauri-plugin-updater = "2.0.0"
 serde_json = "1"
 tauri-plugin-log = "2"
 tauri-plugin-process = "2"
+tauri-plugin-opener = "2.5.3"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
