--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
             args: ""
           - platform: "windows-latest" # For Windows (.exe and .msi)
             args: ""
+          - platform: "macos-latest" # For Intel and Apple Silicon Macs
+            args: "--target universal-apple-darwin"
 
     runs-on: ${{ matrix.platform }}
     steps:
