--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "CharacterDB",
   "private": true,
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -24,6 +24,7 @@
     "framer-motion": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.5.6",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
