--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@tauri-apps/plugin-sql": "^2.0.0",
     "@tauri-apps/plugin-store": "^2.0.0",
     "@tauri-apps/plugin-updater": "^2.9.0",
+    "@types/jszip": "^3.4.0",
     "framer-motion": "^11.0.0",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.5.6",
